--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
