--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "smile-identity-core": "^3.1.0",
     "zod": "^4.1.3",
     "zustand": "^5.0.8"
   },
